--- a/force-app/main/default/classes/VDT_ProductAdoptionBatch.cls
+++ b/force-app/main/default/classes/VDT_ProductAdoptionBatch.cls
@@ -18,13 +18,15 @@ public with sharing class VDT_ProductAdoptionBatch implements Database.Batchable
         String approvedDocumentCountry = VDT_CustomMetadataService.getCountryFieldForObject('Approved_Document_vod__c');
         String clmPresentationCountry = VDT_CustomMetadataService.getCountryFieldForObject('Clm_Presentation_vod__c');
         String eventCountry = VDT_CustomMetadataService.getCountryFieldForObject('EM_Event_vod__c');
+        String eventProductField = VDT_CustomMetadataService.getProductFieldForObject('EM_Event_vod__c');
 
         this.builder = new VDT_ProductAdoptionBuilder()
         .addCountryForObject('Account', accountCountry)
         .addCountryForObject('Key_Message_vod__c', keyMessageCountry)        
         .addCountryForObject('Approved_Document_vod__c', approvedDocumentCountry)
         .addCountryForObject('EM_Event_vod__c', eventCountry)
-        .addCountryForObject('Clm_Presentation_vod__c', clmPresentationCountry);
+        .addCountryForObject('Clm_Presentation_vod__c', clmPresentationCountry)
+        .addProductFieldsByObject(new Map<String, String> { 'EM_Event_vod__c' => eventProductField});
         this.dataCalculationRecord.VDT_Job_Start_Date__c = Datetime.now();
         this.dataCalculationRecord.Batches_Number__c = 0;
         update this.dataCalculationRecord;
